Add @jlumbres and lschatz SPIE 2018 materials

--- a/publications.toml
+++ b/publications.toml
@@ -159,8 +159,8 @@ published_in = "Proc. SPIE 10703, Adaptive Optics Systems VI"
 publication_date = 2018-07-12T00:00:00
 url = "https://doi.org/10.1117/12.2312171"
 poster_file = ""
-manuscript_file = ""
-slides_file = ""
+manuscript_file = "media/spie2018/schatz_SPIE2018PWFSDesignVfinal.pdf"
+slides_file = "media/spie2018/schatz_slides.pdf"
 abstract = '''
 Adaptive optics systems correct atmospheric turbulence in real time. Most
 adaptive optics systems used routinely correct in the near infrared, at
@@ -276,8 +276,8 @@ authors = [
 published_in = "Proc. SPIE. 10703, Adaptive Optics Systems VI"
 publication_date = 2018-07-12T00:00:00
 url = "https://doi.org/10.1117/12.2313780"
-poster_file = ""
-manuscript_file = ""
+poster_file = "media/spie2018/jlumbres_SPIEastro2018_Poster.pdf"
+manuscript_file = "media/spie2018/jlumbres_SPIEastro2018_proceedings_FINAL.pdf"
 slides_file = ""
 abstract = '''
 The challenges of high contrast imaging (HCI) for detecting exoplanets for both
