Add Justin's manuscript

--- a/publications.toml
+++ b/publications.toml
@@ -182,7 +182,7 @@ published_in = "Proc. SPIE 10706, Advances in Optical and Mechanical Technologie
 publication_date = 2018-07-10T00:00:00
 url = "https://doi.org/10.1117/12.2314139"
 poster_file = ""
-manuscript_file = ""
+manuscript_file = "media/spie2018/knight_manuscript.pdf"
 slides_file = ""
 abstract = '''
 Phase-Induced Amplitude Apodization Complex Mask Coronagraphs (PIAACMC) offer
