--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-requests
-beautifulsoup4
-jinja2
-python-dateutil
-lxml
+beautifulsoup4==4.12.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+idna==3.4
+Jinja2==3.1.2
+lxml==4.9.3
+MarkupSafe==2.1.3
+python-dateutil==2.8.2
+requests==2.31.0
+six==1.16.0
+soupsieve==2.5
+urllib3==2.0.4
